--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head> 
 		<!--<link rel="stylesheet" href="mystyle.css" type="text/css"> -->
-		<meta name="author" content="Amey Karkare">
+		<meta name="author" content="Amey Karkare and Amit Gupta">
 		<meta name="keywords" content="CS664, CS 664, IoT, Internet of Things">
 	</head>
 	<title> CS 664: IoT System Design </title>
