--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 <ol style="list-style-type: decimal">
 <li>Introduction &amp; Motivation [<a href="https://drive.google.com/file/d/1-01uabgSQcNEFCQHtbzT0oTFBMHZm-ap/view?usp=sharing">slides</a>] [<a href="#readingOne">Lecture 1 Reading Notes</a>]</li>
 <li>IoT Around Us [<a href="https://drive.google.com/open?id=1pWjlN-Hn6KJPkJ8nHsZQ9T-KKTlRRbYd">slides</a>] [<a href="#readingTwo">Lecture 2 Reading/Video Notes</a>]</li>
-<li>Sensors [<a href="https://drive.google.com/open?id=1hS5YbajNX1uPQI8HPpRDZSddQ3sadnRL">slides</a>] [<a href="#readingThree">Lecture 3 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
-<li>Multi-sensor Systems and Calibration [<a href="https://drive.google.com/open?id=1EH8eN3LP3VGzwROEHSZtC6A4pX_m1aqO">slides</a>] [<a href="#readingFour">Lecture 4 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
+<li>Sensors [<a href="https://drive.google.com/open?id=1hS5YbajNX1uPQI8HPpRDZSddQ3sadnRL">slides</a>] [<a href="#readingThree">Lecture 3 Reading Notes</a>] <img src="Images/new.png"></li>
+<li>Multi-sensor Systems and Calibration [<a href="https://drive.google.com/open?id=1EH8eN3LP3VGzwROEHSZtC6A4pX_m1aqO">slides</a>] [<a href="#readingFour">Lecture 4 Reading Notes</a>] <img src="Images/new.png"></li>
+<li>IoT System Overview [<a href="https://drive.google.com/open?id=1fuxWvl74e0kgTAbd5qI32CEDCN9qY29C">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>	
 </ol>
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
