--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <li>Power management & Batteries [<a href="https://drive.google.com/open?id=1mQLOWggd8klVBVbuaAKfAi2Sy2R5bVCN">slides</a>]</li>
 <li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
 </ol>
+<p>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</p>
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
