--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <li><a href="#outline">Course Outline</a></li>
 <li><a href="#eval">Evaluation Scheme</a></li>
 <li><a href="#handouts">Topics covered and handouts</a></li>
+<li><a href="#labex">Lab exercises</a></li>
 <li><a href="#assignments">Assignments</a></li>
 <li><a href="#project">Course Project</a></li>
 <li><a href="#support">Supporting Material</a></li>
@@ -37,7 +38,7 @@
 <ul>
 <li>Register on [<a href="https://canvas.cse.iitk.ac.in/courses/34">CS664 Canvas</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
 <li>[<a href="#assignments">Assignment 1</a>] released.</li>
-<li>[<a href="A/CS664-Setup-Guidelines.pdf">Installation Manual</a>] to interface with Oblu from your Laptop</li>
+<li>[<a href="https://drive.google.com/open?id=1FoxqyIt0jxW5G4QKEHQ3xNKxG1Ikp0-S">Installation Manual</a>] (updated on June 8th, 2018) to interface with Oblu from your Laptop</li>
 <li>Here is [<a href="https://docs.google.com/spreadsheets/d/1luIXOQbRj_Ay0TIeHnO03zP7xe3eayRctnY25S0DbMg/edit?usp=sharing">your attendance</a>]</li>
 <li>What comes below is a tentative plan for the course to help students to decide whether to take this course or not. Some changes are possible based on the (number of) students finally registered.</li>
 </ul>
@@ -54,6 +55,12 @@
 <li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
+<h2 id="labex">Lab exercises <a id="labex"/></h2>
+<p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=1iC3Pakhub3ThQdofh68ACCDoU1Lb6qyV">Lab exercise 1a</a>. Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
+<li><a href="https://drive.google.com/open?id=17rQHwSCO8NDEegUzSgGjlJSHsQYpWGX_">Lab exercise 2</a>. Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
+</ol>
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
