--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 <li>Multi-sensor Systems and Calibration [<a href="https://drive.google.com/open?id=1EH8eN3LP3VGzwROEHSZtC6A4pX_m1aqO">slides</a>] [<a href="#readingFour">Lecture 4 Reading Notes</a>]</li>
 <li>IoT System Overview [<a href="https://drive.google.com/open?id=1fuxWvl74e0kgTAbd5qI32CEDCN9qY29C">slides</a>]</li>	
 <li>Power management & Batteries [<a href="https://drive.google.com/open?id=1mQLOWggd8klVBVbuaAKfAi2Sy2R5bVCN">slides</a>]</li>
-<li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
+<li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>]</li>
+<li>Microprocessors for IoT Sensors: An Overview[<a href="https://drive.google.com/open?id=1iYzu6Yc_fklYHe7fR34Q7GiwKrtrLzRS">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
