--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
 <li><a href="https://www.dropbox.com/s/o4ypvr53ay7xoh3/FullSizeRender.mov?dl=0">Positioning of surgical instrument with the array board (Video demo - 140 MB)</a></li>
 <li><a href="http://onbase.visole.net/base/Microsenor_2pp_v7b_v2_FINAL_HI_-2017-06-09-10-03-50.pdf">Brochure of CODMAN ICP Sensor</a></li>
 </ol>
+<h3 id="lecture-8">Lecture 8 <a id="readingTwo"/></h3>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=1TwyLx98smxtgg9XRyQsgenLtveIbt8Ws">AT32UC3C: Detailed specifications</a></li>
+<li><a href="https://drive.google.com/open?id=1BjGSrlGE1Kt2Ikd5_wjTZLkonuUzP0Pp">AT32UC3C: Architecture document</a></li>
+<li><a href="https://drive.google.com/open?id=1M2AnMnk3o6W83nsxlBxEfmIc2dJeN1_U">AT32UC3C: Technical reference manual</a></li>
+<li><a href="https://drive.google.com/open?id=15m7fTNxyHpVGKP55sRJxlzNI6_dsBYuA">AT32UC3C: Schematics (reference design)</a></li>
+</ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
 <ul>
