--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <li><a href="https://drive.google.com/open?id=1TwyLx98smxtgg9XRyQsgenLtveIbt8Ws">AT32UC3C: Detailed specifications</a></li>
 <li><a href="https://drive.google.com/open?id=1BjGSrlGE1Kt2Ikd5_wjTZLkonuUzP0Pp">AT32UC3C: Architecture document</a></li>
 <li><a href="https://drive.google.com/open?id=1M2AnMnk3o6W83nsxlBxEfmIc2dJeN1_U">AT32UC3C: Technical reference manual</a></li>
-<li><a href="https://drive.google.com/open?id=15m7fTNxyHpVGKP55sRJxlzNI6_dsBYuA">AT32UC3C: Schematics (reference design)</a></li>
+<li><a href="https://drive.google.com/open?id=15m7fTNxyHpVGKP55sRJxlzNI6_dsBYuA">AT32UC3C: Schematics (reference board design)</a></li>
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
