--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 </ol>
 <h3 id="lecture-8">Lecture 8 <a id="readingTwo"/></h3>
 <ol style="list-style-type: decimal">
+<li>Microprocessor, Architecture, Programming, & Applications with the 8085 by Ramesh Gaonkar</a></li>	
 <li><a href="https://drive.google.com/open?id=1TwyLx98smxtgg9XRyQsgenLtveIbt8Ws">AT32UC3C: Detailed specifications</a></li>
 <li><a href="https://drive.google.com/open?id=1BjGSrlGE1Kt2Ikd5_wjTZLkonuUzP0Pp">AT32UC3C: Architecture document</a></li>
 <li><a href="https://drive.google.com/open?id=1M2AnMnk3o6W83nsxlBxEfmIc2dJeN1_U">AT32UC3C: Technical reference manual</a></li>
