--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
 <li><a href="A/CS664-HA01.pdf">Questions</a>. Deadline: <strong>30th May, 2018</strong> . Submission through Canvas.</li>
+<li><a href="https://drive.google.com/open?id=1JbdB8iXsqZwLd3qdbA4k3HJRKMpgQCcJ">Questions</a>. Deadline: <strong>18th June, 2018</strong> . Submission through Canvas.</li>
+</ol>
+<h2 id="quizzes">Quizzes <a id="quizzes"/></h2>
+<p>There will be short quizzes in classroom to encourage interaction.</p>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=1Iw9SAeMwBqfniaR_XbNF-00MIusjfyml">Quiz no.1 with solution</a></li>
 </ol>
 <hr />
 <h2 id="course-project">Course Project<a id="project"/></h2>
