--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h2 id="quizzes">Quizzes <a id="quizzes"/></h2>
 <p>There will be short quizzes in classroom to encourage interaction.</p>
 <ol style="list-style-type: decimal">
-<li><a href="https://drive.google.com/open?id=1Iw9SAeMwBqfniaR_XbNF-00MIusjfyml">Quiz no.1 with solution</a></li>
+<li><a href="https://drive.google.com/open?id=1Iw9SAeMwBqfniaR_XbNF-00MIusjfyml">Quiz 1 with solution</a></li>
 </ol>
 <hr />
 <h2 id="course-project">Course Project<a id="project"/></h2>
