--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 <li>IoT System Overview [<a href="https://drive.google.com/open?id=1fuxWvl74e0kgTAbd5qI32CEDCN9qY29C">slides</a>]</li>	
 <li>Power management & Batteries [<a href="https://drive.google.com/open?id=1mQLOWggd8klVBVbuaAKfAi2Sy2R5bVCN">slides</a>]</li>
 <li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>]</li>
-<li>Microprocessors for IoT Sensors: An Overview[<a href="https://drive.google.com/open?id=1iYzu6Yc_fklYHe7fR34Q7GiwKrtrLzRS">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
+<li>Microprocessors for IoT Sensors: An Overview[<a href="https://drive.google.com/open?id=1iYzu6Yc_fklYHe7fR34Q7GiwKrtrLzRS">slides</a>]</li>
+<li>[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">Microcontrollers for IoT Sensors: Resources and Processes</a>] <\b>
+[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">Clock Budgeting of an IoT Sensor Node</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
