--- a/index.html
+++ b/index.html
@@ -138,17 +138,25 @@ Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=
 <li><a href="https://www.dropbox.com/s/o4ypvr53ay7xoh3/FullSizeRender.mov?dl=0">Positioning of surgical instrument with the array board (Video demo - 140 MB)</a></li>
 <li><a href="http://onbase.visole.net/base/Microsenor_2pp_v7b_v2_FINAL_HI_-2017-06-09-10-03-50.pdf">Brochure of CODMAN ICP Sensor</a></li>
 </ol>
-<h3 id="lecture-6">Lecture 6 <a id="readingThree"/></h3>
+<h3 id="lecture-6">Lecture 6 <a id="readingSix"/></h3>
 <ol style="list-style-type: decimal">
 <li><a href="http://batteryuniversity.com/">Battery University</a></li>
 </ol>
-<h3 id="lecture-8">Lecture 8 <a id="readingTwo"/></h3>
+<h3 id="lecture-8">Lecture 8 <a id="readingEight"/></h3>
 <ol style="list-style-type: decimal">
 <li>Microprocessor, Architecture, Programming, & Applications with the 8085 by Ramesh Gaonkar</a></li>	
 <li><a href="https://drive.google.com/open?id=1TwyLx98smxtgg9XRyQsgenLtveIbt8Ws">AT32UC3C: Detailed specifications</a></li>
 <li><a href="https://drive.google.com/open?id=1BjGSrlGE1Kt2Ikd5_wjTZLkonuUzP0Pp">AT32UC3C: Architecture document</a></li>
 <li><a href="https://drive.google.com/open?id=1M2AnMnk3o6W83nsxlBxEfmIc2dJeN1_U">AT32UC3C: Technical reference manual</a></li>
 <li><a href="https://drive.google.com/open?id=15m7fTNxyHpVGKP55sRJxlzNI6_dsBYuA">AT32UC3C: Schematics (reference board design)</a></li>
+</ol>
+<h3 id="lecture-9">Lecture 9 <a id="readingNine"/></h3>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=1YN6oEIv7I3s1rB1vYBjQYjbSjuJ0TM11">8257 Programmable DMA Controller</a></li>
+<li><a href="https://drive.google.com/open?id=1J5q5AvJP3Xh35tzxkFsT1o3E21iX19OJ">8259 Programmable Interrupt Controller</a></li>
+<li><a href="https://www.slideshare.net/gt-silicon/evolution-of-a-shoemounted-multiimu-pedestrian-dead-reckoning-pdr-sensor">On the noise and power performance of a shoe-mounted multi-IMU inertial positioning system by S Bose, A K Gupta and P Handel</a></li>
+<li><a href="https://s2.smu.edu/~dhoungninou/CSE-EE-5-7385/references/how-to-select-uC.pdf">How to select a microcontroller by J J Vaglica and P S Gilmour</a></li>
+<li><a href="https://www.edn.com/electronics-blogs/embedded-basics/4411480/1/10-steps-to-selecting-a-microcontroller">10 steps to selecting a microcontroller by J Beningo</a></li>
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
