--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=
 <li><a href="https://drive.google.com/open?id=1iC3Pakhub3ThQdofh68ACCDoU1Lb6qyV">Lab exercise 1a</a>. Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
 <li><a href="https://drive.google.com/open?id=17rQHwSCO8NDEegUzSgGjlJSHsQYpWGX_">Lab exercise 2</a>. Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
 </ol>
+<a href="https://drive.google.com/open?id=1OQZ3lcURrZ-QSc0lnVRutOCUdvmJo5VS">Lab exercise 2</a> with minor improvements, based on interactions during lab session.
+<a href="https://drive.google.com/open?id=1WzLNwbmsuyb59S3-aneXNynRl5vLi-E4">Lab exercise 1a</a> with minor improvements, based on interactions during lab session.
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
