--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=
 <li><a href="https://drive.google.com/open?id=17rQHwSCO8NDEegUzSgGjlJSHsQYpWGX_">Lab exercise 2</a> (updated on June 11th, 2018; minor; updated text in blue.). Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
 </ol>
 <p><a href="https://drive.google.com/open?id=1WF58b2pHUvOZ1q4cMyjGXikEeEhpDaHk">Hint for connecting oblu to WiFi network.</a></p>
+<p><a href="https://drive.google.com/open?id=1ZydEtPNxlh77PddwQpHnyDGMk5Oj7Q7V">Sample calibration file.</a></p>
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
