--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <hr />
 <h2 id="announcements">Announcements <a id="announcements"/></h2>
 <ul>
-<li>Register on [<a href="https://canvas.cse.iitk.ac.in/courses/34">CS664 Canvas</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
-<li>[<a href="#assignments">Assignment 1</a>] released.</li>
+<li>Register on [<a href="https://canvas.cse.iitk.ac.in/courses/34">CS664 Canvas</a>]
+
 <li>[<a href="https://drive.google.com/open?id=1FoxqyIt0jxW5G4QKEHQ3xNKxG1Ikp0-S">Installation Manual</a>] (updated on June 8th, 2018) to interface with Oblu from your Laptop</li>
 <li>[<a href="https://drive.google.com/open?id=1DkY1HgqBuC-1lUDbyXYUiTwEHIXFTEeQ">Installation Manual</a>] (updated on June 11th, 2018) with minor updates based on interactions during lab sessions.</li>
 <li>Here is [<a href="https://docs.google.com/spreadsheets/d/1luIXOQbRj_Ay0TIeHnO03zP7xe3eayRctnY25S0DbMg/edit?usp=sharing">your attendance</a>]</li>
@@ -55,8 +55,9 @@
 <li>Power management & Batteries [<a href="https://drive.google.com/open?id=1mQLOWggd8klVBVbuaAKfAi2Sy2R5bVCN">slides</a>] [<a href="#readingSix">Lecture 6 Reading Notes</a>]</li>
 <li>Understanding Microprocessors [<a href="https://drive.google.com/open?id=1GlsY64nDDsKMY5MZT2ef4gSKWKj6RQuZ">slides</a>]</li>
 <li>Microprocessors for IoT Sensors: An Overview[<a href="https://drive.google.com/open?id=1iYzu6Yc_fklYHe7fR34Q7GiwKrtrLzRS">slides</a>] [<a href="#readingEight">Lecture 8 Reading Notes</a>]</li>
-<li>Microcontrollers for IoT Sensors: Resources and Processes[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> 
-Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> [<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
+<li>Microcontrollers for IoT Sensors: Resources and Processes[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>] 
+  Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
+<li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> 
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
