--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 <li>Microprocessors for IoT Sensors: An Overview[<a href="https://drive.google.com/open?id=1iYzu6Yc_fklYHe7fR34Q7GiwKrtrLzRS">slides</a>] [<a href="#readingEight">Lecture 8 Reading Notes</a>]</li>
 <li>Microcontrollers for IoT Sensors: Resources and Processes[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>] 
   Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
-<li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> 
-</ol>
+<li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
+<li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> 
+		</ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
