lecture 11 helper material

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <li>Microcontrollers for IoT Sensors: Resources and Processes[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>] 
   Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
 <li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
-<li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>] <img src="Images/new.png" alt="[[NEW]]"> 
+<li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]"> 
 		</ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
@@ -163,6 +163,12 @@
 <li><a href="https://www.slideshare.net/gt-silicon/evolution-of-a-shoemounted-multiimu-pedestrian-dead-reckoning-pdr-sensor">On the noise and power performance of a shoe-mounted multi-IMU inertial positioning system by S Bose, A K Gupta and P Handel</a></li>
 <li><a href="https://s2.smu.edu/~dhoungninou/CSE-EE-5-7385/references/how-to-select-uC.pdf">How to select a microcontroller by J J Vaglica and P S Gilmour</a></li>
 <li><a href="https://www.edn.com/electronics-blogs/embedded-basics/4411480/1/10-steps-to-selecting-a-microcontroller">10 steps to selecting a microcontroller by J Beningo</a></li>
+</ol>
+
+<h3 id="lecture-11">Lecture 11 <a id="readingElvn"/></h3>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=1aG9Bpnt2E8HaITLGwxWFq8gOc_9qebqJ"> Python: File I/O, Exceptions, Modules</a></li>
+<li><a href="https://drive.google.com/open?id=1pIKuFzNyVar_aW4srS5IV-eIEqdZhDhz"> Python: Classes and OOP (with example scripts)</a><./li> 	
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
