--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <h3 id="lecture-11">Lecture 11 <a id="readingElvn"/></h3>
 <ol style="list-style-type: decimal">
 <li><a href="https://drive.google.com/open?id=1aG9Bpnt2E8HaITLGwxWFq8gOc_9qebqJ"> Python: File I/O, Exceptions, Modules</a></li>
-<li><a href="https://drive.google.com/open?id=1pIKuFzNyVar_aW4srS5IV-eIEqdZhDhz"> Python: Classes and OOP (with example scripts)</a><./li> 	
+<li><a href="https://drive.google.com/open?id=1pIKuFzNyVar_aW4srS5IV-eIEqdZhDhz"> Python: Classes and OOP (with example scripts)</a></li> 	
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
