--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
 <li>Microcontrollers for IoT Sensors: Resources and Processes[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>] 
   Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
 <li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
-<li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]"> 
-		</ol>
+<li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] 
+<li>Pedestrian Dead Reckoning[<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>] <img src="Images/new.png" alt="[[NEW]]">
+    Case study: oblu's firmware design (framework only)[<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>] <img src="Images/new.png" alt="[[NEW]]">
+    Designing a non-standard communication i/f for an IoT sensor node[<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>] <img src="Images/new.png" alt="[[NEW]]">
+    oblu-Arduino based autonomous vehicle[<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
+</ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
