--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   Clock Budgeting of an IoT Sensor Node[<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
 <li>Representation of Numbers[<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
 <li>Networking and IoT[<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] 
-<li><ul><li>Pedestrian Dead Reckoning[<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]</li>
-    Case study: oblu's firmware design (framework only)[<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>]
-    Designing a non-standard communication i/f for an IoT sensor node[<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]
-    oblu-Arduino based autonomous vehicle[<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li>
+<li><ul><li>Pedestrian Dead Reckoning[<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]<img src="Images/new.png" alt="[[NEW]]"></li>
+    <li>Case study: oblu's firmware design (framework only)[<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>]<img src="Images/new.png" alt="[[NEW]]"></li>
+    <li>Designing a non-standard communication i/f for an IoT sensor node[<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]<img src="Images/new.png" alt="[[NEW]]"></li>
+    <li>oblu-Arduino based autonomous vehicle[<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]"></li></li>
 </ul>
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
