--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   Clock Budgeting of an IoT Sensor Node [<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
 <li>Representation of Numbers [<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
 <li>Networking and IoT [<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] 
-<li><ul><li>Pedestrian Dead Reckoning [<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
+<li>[<a href="#readingTwelve">Lecture 12 Reading/Video Notes</a>]<ul><li>Pedestrian Dead Reckoning [<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
     <li>Case study: oblu's firmware design (framework only) [<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
     <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
     <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li></li>
@@ -174,6 +174,12 @@
 <ol style="list-style-type: decimal">
 <li><a href="https://drive.google.com/open?id=1aG9Bpnt2E8HaITLGwxWFq8gOc_9qebqJ"> Python: File I/O, Exceptions, Modules</a></li>
 <li><a href="https://drive.google.com/open?id=1pIKuFzNyVar_aW4srS5IV-eIEqdZhDhz"> Python: Classes and OOP (with example scripts)</a></li> 	
+</ol>
+<h3 id="lecture-12">Lecture 12 <a id="readingElvn"/></h3>
+<ol style="list-style-type: decimal">
+<li><a href="https://www.youtube.com/watch?v=c1bYfUYlVSo"> Video demo: Pre-programmed with path to navigate</a></li>
+<li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Path programmed by Android phone</a></li> 	
+<li><a href="https://www.youtube.com/watch?v=YsL54ehzo2E"> Video demo: Path receiving from another oblu attached to shoe</a></li> 
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
