--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <li><a href="https://drive.google.com/open?id=1aG9Bpnt2E8HaITLGwxWFq8gOc_9qebqJ"> Python: File I/O, Exceptions, Modules</a></li>
 <li><a href="https://drive.google.com/open?id=1pIKuFzNyVar_aW4srS5IV-eIEqdZhDhz"> Python: Classes and OOP (with example scripts)</a></li> 	
 </ol>
-<h3 id="lecture-12">Lecture 12 <a id="readingElvn"/></h3>
+<h3 id="lecture-12">Lecture 12 <a id="readingTwelve"/></h3>
 <ol style="list-style-type: decimal">
 <li><a href="https://www.youtube.com/watch?v=c1bYfUYlVSo"> Video demo: Pre-programmed with path to navigate</a></li>
 <li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Path programmed by Android phone</a></li> 	
