--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 </ol>
 <h3 id="lecture-12">Lecture 12 <a id="readingTwelve"/></h3>
 <ol style="list-style-type: decimal">
-<li><a href="https://www.youtube.com/watch?v=c1bYfUYlVSo"> Video demo: Pre-programmed with path to navigate</a></li>
-<li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Path programmed by Android phone</a></li> 	
-<li><a href="https://www.youtube.com/watch?v=YsL54ehzo2E"> Video demo: Path receiving from another oblu attached to shoe</a></li> 
+<li><a href="https://www.youtube.com/watch?v=c1bYfUYlVSo"> Video demo: Robot pre-programmed with path to navigate</a></li>
+<li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Robot path programmed by Android phone</a></li> 	
+<li><a href="https://www.youtube.com/watch?v=YsL54ehzo2E"> Video demo: Robot receiving path on-the-fly from another oblu attached to shoe</a></li> 
 </ol>
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
