--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 </ol>
 <h3 id="lecture-12">Lecture 12 <a id="readingTwelve"/></h3>
 <ol style="list-style-type: decimal">
+<li><a href="https://www.slideshare.net/gt-silicon/foot-mounted-pedestrian-navigation-systems">Design reference</a></li>
 <li>Section I and II of <a href="https://www.slideshare.net/gt-silicon/longterm-performance-evaluation-of-a-footmounted-pedestrian-navigation-device">Long-term Performance Evaluation of a Foot-mounted Pedestrian Navigation Device by A K Gupta, I Skog and P Handel</a></li>
 <li><a href="https://www.youtube.com/watch?v=c1bYfUYlVSo"> Video demo: Robot pre-programmed with path to navigate</a></li>
 <li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Robot path programmed by Android phone</a></li> 	
