--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
     <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li></li>
 </ul>
+<li>Big Data[<a href="https://drive.google.com/open?id=1HODjY5QIUNaaJqyxfOPwCrTWwvKqBQzk">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
+
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
