--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
 <li><a href="A/CS664-HA01.pdf">Questions</a>. Deadline: <strong>30th May, 2018</strong> . Submission through Canvas.</li>
-<li><a href="https://drive.google.com/open?id=1JbdB8iXsqZwLd3qdbA4k3HJRKMpgQCcJ">Questions</a>. Deadline: <strong>18th June, 2018</strong> . Submission through Canvas.</li>
+<li><a href="https://drive.google.com/open?id=1JbdB8iXsqZwLd3qdbA4k3HJRKMpgQCcJ">Questions</a>. <a href="https://drive.google.com/open?id=1VIiLxPYOW3Msk8m-AQfpq_bsXz79XdwF">Solution</a>. Deadline: <strong>18th June, 2018</strong> . Submission through Canvas.</li>
 </ol>
 <h2 id="quizzes">Quizzes <a id="quizzes"/></h2>
 <p>There will be short quizzes in classroom to encourage interaction.</p>
