--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   Clock Budgeting of an IoT Sensor Node [<a href="https://drive.google.com/open?id=1BeJMSNNK-5NQLCSWOMutRGtfLyvbMBu7">slides</a>][<a href="#readingNine">Lecture 9 Reading Notes</a>]</li>
 <li>Representation of Numbers [<a href="https://drive.google.com/open?id=13wpH9pK04pKq94CyFYYG7f7GnD4njVm5">slides</a>]
 <li>Networking and IoT [<a href="https://docs.google.com/presentation/d/1hdB4-UAwufAPe4HxHa-OWlwt-IieNOHkttiFtfJF0SY/edit?usp=sharing">slides</a>][<a href="#readingElvn">Lecture 11 Reading Notes</a>] 
-<li>Design review of certain aspects of oblu[<a href="#readingTwelve">Lecture 12 Reading/Video Notes</a>]<ul><li>Pedestrian Dead Reckoning [<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
-    <li>Case study: oblu's firmware design (framework only) [<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
-    <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
-    <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li></li>
+<li>Design review of certain aspects of oblu[<a href="#readingTwelve">Lecture 12 Reading/Video Notes</a>]<ul><li>Pedestrian Dead Reckoning [<a href="https://drive.google.com/open?id=1CtzetbsxHZ2ts9XdRChTKKybiK11irrR">slides</a>]</li>
+    <li>Case study: oblu's firmware design (framework only) [<a href="https://drive.google.com/open?id=15KOVEhiLj_A91SQIMuZw3CokpN7W7KN-">slides</a>]</li>
+    <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]</li>
+    <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>]</li></li>
 </ul>
 <li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
 
@@ -76,6 +76,7 @@
 <li><a href="https://drive.google.com/open?id=1Libn-He-NkRTg3JLY-5idaq5oh01hv2b">Lab exercise 3</a>. Deadline: <strong>22nd June, 2018</strong> . Submission through Canvas.</li>
 </ol>
 <p><a href="https://drive.google.com/open?id=1WF58b2pHUvOZ1q4cMyjGXikEeEhpDaHk">Hint for connecting oblu to WiFi network.</a></p>
+<p><a href="https://drive.google.com/open?id=1GNmfYpS_VaIj8ge8D4FoOjmXmMDrinKY">Overview of Atmel Studio Environment.</a></p>
 <p><a href="https://drive.google.com/open?id=1ZydEtPNxlh77PddwQpHnyDGMk5Oj7Q7V">Sample calibration file.</a></p>
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
