--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 <p><a href="https://drive.google.com/open?id=1WF58b2pHUvOZ1q4cMyjGXikEeEhpDaHk">Hint for connecting oblu to WiFi network.</a></p>
 <p><a href="https://drive.google.com/open?id=1GNmfYpS_VaIj8ge8D4FoOjmXmMDrinKY">Overview of Atmel Studio Environment.</a></p>
 <p><a href="https://drive.google.com/open?id=1ZydEtPNxlh77PddwQpHnyDGMk5Oj7Q7V">Sample calibration file.</a></p>
+<p><a href="https://drive.google.com/open?id=1M7DprnZF1nFi5cxfLqsOYPM4lL3wEHww">Time differential demystified.</a></p>	
 <h2 id="assignments">Assignments <a id="assignments"/></h2>
 <p>There will be short assignments to give you a chance to apply the lecture material. Assignments will have some programming tasks.</p>
 <ol style="list-style-type: decimal">
