--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]</li>
     <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>]</li></li>
 </ul>
-<li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
-
+<li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
+<li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
 </ol>
 <p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
@@ -187,6 +187,7 @@
 <li><a href="https://www.youtube.com/watch?v=9c2yeqhoBvo"> Video demo: Robot path programmed by Android phone</a></li> 	
 <li><a href="https://www.youtube.com/watch?v=YsL54ehzo2E"> Video demo: Robot receiving path on-the-fly from another oblu attached to shoe</a></li> 
 </ol>
+
 <h2 id="references">References <a id="reference"/></h2>
 <p>There is no textbook for the course. The following material will be used for reference.</p>
 <ul>
