--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 </ul>
 <hr />
 <h2 id="topics-covered-and-slides">Topics Covered and Slides <a id="handouts"/></h2>
-<h3 id="contents"><a href="CourseContents.html">Contents</a></h3>
+<h3 id="contents"><a href="CourseContents.html">Course Contents</a></h3>
+<p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <ol style="list-style-type: decimal">
 <li>Introduction &amp; Motivation [<a href="https://drive.google.com/file/d/1-01uabgSQcNEFCQHtbzT0oTFBMHZm-ap/view?usp=sharing">slides</a>] [<a href="#readingOne">Lecture 1 Reading Notes</a>]</li>
 <li>IoT Around Us [<a href="https://drive.google.com/open?id=1pWjlN-Hn6KJPkJ8nHsZQ9T-KKTlRRbYd">slides</a>] [<a href="#readingTwo">Lecture 2 Reading/Video Notes</a>]</li>
@@ -67,7 +68,6 @@
 <li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
 <li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
 </ol>
-<p><i>The images/contents are used for teaching purpose and for fun. The copyright remains with the original creator. If you suspect a copyright violation, bring it to our notice and we will remove that image/content.</i></p>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
 <ol style="list-style-type: decimal">
