--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 <ul>
 <li><strong>Project Description</strong> will come Here</li>
 </ul>
+<p><strong>References:</strong></p>
 <p><a href="https://drive.google.com/open?id=1T-gRIpCPfAYkC60Hd0flxpZ9Efm6oVto">Data fusion of dual foot-mounted INS to reduce the systematic heading drift</a> by Prateek G V, Girisha R, K V S Hari and Peter Handel</p>
 <hr />
 <h3 id="evaluation-scheme">Evaluation Scheme <a id="eval"/></h3>
