--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 </ul>
 <p><strong>References:</strong></p>
 <p><a href="https://drive.google.com/open?id=1T-gRIpCPfAYkC60Hd0flxpZ9Efm6oVto">Data fusion of dual foot-mounted INS to reduce the systematic heading drift</a> by Prateek G V, Girisha R, K V S Hari and Peter Handel</p>
+<p><a href="https://drive.google.com/open?id=1c04CWGTAfUzHT0wCtyeseT8j0tvQoeKa">Setting up WiFi (ESP8266) module</a></p>
 <hr />
 <h3 id="evaluation-scheme">Evaluation Scheme <a id="eval"/></h3>
 <p><strong>Tentative</strong></p>
