--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 <hr />
 <h2 id="course-project">Course Project<a id="project"/></h2>
 <ul>
-<li><strong>Project Description</strong> will come Here</li>
+<li><a href="https://drive.google.com/open?id=1hCTJXhZD1R9rGxJTuJ_2AQxme3b6wJfI">Implementing dual foot-mounted configuration with oblu</a></li>
 </ul>
+	<p><i>Each group will be given one more WiFi enabled oblu board + battery + casing</i></p>
 <p><strong>References:</strong></p>
 <p><a href="https://drive.google.com/open?id=1T-gRIpCPfAYkC60Hd0flxpZ9Efm6oVto">Data fusion of dual foot-mounted INS to reduce the systematic heading drift</a> by Prateek G V, Girisha R, K V S Hari and Peter Handel</p>
 <p><a href="https://drive.google.com/open?id=1c04CWGTAfUzHT0wCtyeseT8j0tvQoeKa">Setting up WiFi (ESP8266) module</a></p>
