--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
     <li>Designing a non-standard communication i/f for an IoT sensor node [<a href="https://drive.google.com/open?id=1KNaA8aO4xI9qpEvnIWeSxQ-1Kw9Pxi7J">slides</a>]</li>
     <li>oblu-Arduino based autonomous vehicle [<a href="https://drive.google.com/open?id=19G8X9OBtZp1F8JXelkRlO912qkHBDs8k">slides</a>]</li></li>
 </ul>
-<li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
-<li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]<img src="Images/new.png" alt="[[NEW]]" width=32></li>
+<li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>]</li>
+<li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]</li>
+<li>Revisiting Arduino[<a href="https://drive.google.com/open?id=1G09WiohAEE_qBqKC6HEFrTmscnjemiIQ">slides</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
 </ol>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
